--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,18 +37,17 @@
                 <p>토끼 유형 테스트 <br></p>
             </div>
             <div class="feat">
-                <p>.feat 사랑에 빠졌을 때</p>
+                <p>.feat 썸에서 고백까지</p>
             </div>
             <div class="main_img">
                 <a href="index.html"><img src="../images/p_images/love_rabbit.png" alt="이미지 준비 중"></a>
             </div>
             <hr class="divider">
             <p class="info">
-                <span class="sec-tit">2023년은 토끼의 해 계묘년!! </span> <br>
                 <br>
             </p>
-            <p class="sub_info">좋아하는 사람이 생겨버렸다..
-                <br> 이제 어떡하지?? <br>내가 플러팅을 어떻게 해야할까?
+            <p class="sub_info">혹시,,이거.. 그린라이트?
+                <br> 어떻게든 고백까지 성공해야한다! <br> 어떻게 해야할까? 
             </p>
 
             <div class="input_name">
@@ -59,7 +58,6 @@
                 <button class="start">시 작</button> <!--qna페이지로 넘어가기-->
             </div>
         </section>
-
         <section id="qna" class="container">
             <div class="title">
                 <p>fall in Love..</p>
@@ -82,7 +80,7 @@
             <div class="wait">잠시 기다려주세요...</div>
         </section>
 
-        <section id="result-section" class="container">
+        <section id="result_section" class="container">
             <div class="result_img">
                 <a href=""><img src="" alt="이미지 준비중"></a>
             </div>
