--- a/HTML/result.html
+++ b/HTML/result.html
@@ -30,12 +30,7 @@
             <a href="">
                 <button class="logo"></button></a>
         </header>
-        <section class="display_section_3">
-            <div class="title">
-                <p>OOO님은 전생에?</p> <!--그라데이션으로 이미지가 나왔으면 좋겠음-->
-            </div>
-        </section>
-        <section class="result-section">
+        <section id="result_section" class="container">
             <div class="result_img">
                 <a href=""><img src="" alt="이미지 준비중"></a>
             </div>
@@ -48,15 +43,15 @@
                     블라블라 블라블라 블라블라 블라블라
                 </p>
             </div>
-        <div class="share">
-            <span class="share_tit">
-                <p>친구들에게 공유하기</p>
-            </span>
-            <div class="SNS_icons">
-                <a href="" class="twitter"><img src="../images/s_images/twitter.png"></a>
-                <a href="" class="facebook"><img src="../images/s_images/facebook.png"></a>
-                <a href="" class="kakaotalk"><img src="../images/s_images/kakao.png"></a>
-            </div>
+            <div class="share">
+                <span class="share_tit">
+                    <p>친구들에게 공유하기</p>
+                </span>
+                <div class="SNS_icons">
+                    <a href="" class="twitter"><img src="../images/s_images/twitter.png"></a>
+                    <a href="" class="facebook"><img src="../images/s_images/facebook.png"></a>
+                    <a href="" class="kakaotalk"><img src="../images/s_images/kakao.png"></a>
+                </div>
         </section>
         <footer class="footer">
             <p class="my_info">
