각페이지 수정, result.html 집중 수정

--- a/HTML/result.html
+++ b/HTML/result.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/start_page.css">
     <link rel="stylesheet" type="text/css" href="../css/qna.css">
+    <link rel="stylesheet" type="text/css" href="../css/result.css">
     <link rel="shortcut icon" href="/images/favicon/lion.ico">
     <link rel="apple-touch-icon-precomposed" href="/images/favicon/lion.ico">
     <script src="/js/jquery.min.js"></script>
@@ -31,12 +32,19 @@
                 <button class="logo"></button></a>
         </header>
         <section id="result_section" class="container">
+            <div class="result_title">
+                <p>썸 새내기 큐티 뽀짝 라이언헤드</p>
+            </div>
             <div class="result_img">
-                <a href=""><img src="" alt="이미지 준비중"></a>
+                <a href=""><img src="/images/p_images/love_rabbit.png" alt="이미지 준비중"></a>
             </div>
             <div class="result_info">
-                <h1>OOO님은 플러팅의 장인.</h1>
-                <p> 상대방이 어떤 의도를 가지고 블라블라
+                <h1></h1>
+                <p> OOO님은 서툴지만 귀여운 라이언헤드입니다.
+                    비가 오는 날 우산이 없는 상대에게 
+                    자신의 우산을 주고 비를 맞고 갈 당신
+                    <br>
+                    상대방이 어떤 의도를 가지고 블라블라
                     블라블라 블라블라 블라블라 블라블라
                     블라블라 블라블라 블라블라 블라블라
                     블라블라 블라블라 블라블라 블라블라
@@ -48,12 +56,15 @@
                     <p>친구들에게 공유하기</p>
                 </span>
                 <div class="SNS_icons">
-                    <a href="" class="twitter"><img src="../images/s_images/twitter.png"></a>
-                    <a href="" class="facebook"><img src="../images/s_images/facebook.png"></a>
-                    <a href="" class="kakaotalk"><img src="../images/s_images/kakao.png"></a>
+                    <a href="" class="twitter"><img src="../images/s_images/twitter.png">
+                 </a>
+                    <a href="" class="facebook"><img src="../images/s_images/facebook.png">
+                    </a>
+                    <a href="" class="kakaotalk"><img src="../images/s_images/kakao.png">
+                    </a>
                 </div>
         </section>
-        <footer class="footer">
+        <footer id="footer">
             <p class="my_info">
                 <span class="dev_name">dev : Me-Nyong</span>
                 <span class="github"><a href="https://github.com/dev-MeNyong"><img src="../images/p_images/github.png"
