--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,7 +51,7 @@
             </p>
 
             <div class="input_name">
-                <input type="text" class="enter_name" placeholder="이름">
+                <input type="text" value="" class="enter_name" placeholder="이름">
         </div>
         <p class="check-name warning"></p>
             <div class="start_wrap">
@@ -119,6 +119,7 @@
         </footer>
 
     </div>
-    <script src="../js/data.js" type="module"></script>
     <script src="../js/main.js" type="module"></script>
+    <script src="../js/data.js" type="module"></script>
+  
 </body>
