html 구조 조금 수정

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -81,16 +81,15 @@
         </section>
 
         <section id="result_section" class="container">
-            <div class="result_img">
-                <a href=""><img src="" alt="이미지 준비중"></a>
-            </div>
+          
             <div class="result_info">
                 <h1>OOO님은 플러팅의 장인.</h1>
-                <p> 상대방이 어떤 의도를 가지고 블라블라
-                    블라블라 블라블라 블라블라 블라블라
-                    블라블라 블라블라 블라블라 블라블라
-                    블라블라 블라블라 블라블라 블라블라
-                    블라블라 블라블라 블라블라 블라블라
+                 <p class="point">40점</p> 
+                 <div class="result_img"></div>
+                 <p class="sub_tit">겁이 많은 내적관종<br> 라이언헤드</p>
+                <p class="sub"> 상대방이 나를 어떻게 생각할지, 고민거리가 많은 당신..! 
+                    <br> 조금만 더 용기를 내어보세요!
+                    <br> 혹시 몰라요? 이미 당신을 좋아하고 있을지?
                 </p>
             </div>
             <div class="share">
