--- a/HTML/result.html
+++ b/HTML/result.html
@@ -32,23 +32,15 @@
                 <button class="logo"></button></a>
         </header>
         <section id="result_section" class="container">
-            <div class="result_title">
-                <p>썸 새내기 큐티 뽀짝 라이언헤드</p>
-            </div>
-            <div class="result_img">
-                <a href=""><img src="/images/p_images/love_rabbit.png" alt="이미지 준비중"></a>
-            </div>
+          
             <div class="result_info">
-                <h1></h1>
-                <p> OOO님은 서툴지만 귀여운 라이언헤드입니다.
-                    비가 오는 날 우산이 없는 상대에게 
-                    자신의 우산을 주고 비를 맞고 갈 당신
-                    <br>
-                    상대방이 어떤 의도를 가지고 블라블라
-                    블라블라 블라블라 블라블라 블라블라
-                    블라블라 블라블라 블라블라 블라블라
-                    블라블라 블라블라 블라블라 블라블라
-                    블라블라 블라블라 블라블라 블라블라
+                <h1>OOO님은 플러팅의 장인.</h1>
+                 <p class="point">40점</p> 
+                 <div class="result_img"></div>
+                 <p class="sub_tit">겁이 많은 내적관종<br> 라이언헤드</p>
+                <p class="sub"> 상대방이 나를 어떻게 생각할지, 고민거리가 많은 당신..! 
+                    <br> 조금만 더 용기를 내어보세요!
+                    <br> 혹시 몰라요? 이미 당신을 좋아하고 있을지?
                 </p>
             </div>
             <div class="share">
