--- a/HTML/calc.html
+++ b/HTML/calc.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" type="text/css" href="../css/qna.css">
     <link rel="stylesheet" type="text/css" href="../css/calc.css">
     <link rel="stylesheet" type="text/css" href="../css/result.css">
-    <link rel="shortcut icon" href="/images/favicon/lion.ico">
-    <link rel="apple-touch-icon-precomposed" href="/images/favicon/lion.ico">
+    <link rel="shortcut icon" href="/images/favicon/love_rabbit.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/favicon/love_rabbit.png">
     <script src="/js/jquery.min.js"></script>
 
     <style>
@@ -25,8 +25,8 @@
     </style>
 </head>
 
-<body>
-    <div id="wrap">
+<body class="calc_body">
+    <div id="wrap" class="calc_wrap">
     
         <section id="calc">
             <div class="calc-bar">
