--- a/HTML/qna.html
+++ b/HTML/qna.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/start_page.css">
     <link rel="stylesheet" type="text/css" href="../css/qna.css">
-    <link rel="shortcut icon" href="/images/favicon/lion.ico">
-    <link rel="apple-touch-icon-precomposed" href="/images/favicon/lion.ico">
+    <link rel="shortcut icon" href="/images/favicon/love_rabbit.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/favicon/love_rabbit.png">
     <script src="/js/jquery.min.js"></script>
     <script src=""></script>
     <style>
@@ -24,30 +24,24 @@
 </head>
 
 <body>
-    <div id="wrap">
+    <div id="wrap" class="qna_wrap">
 
         <header id="header">
-            <a href="">
-                <button class="logo"></button></a>
+            <button class="logo" title="다크모드"></button>
         </header>
         <section id="qna" class="container">
-            <div class="status-bar">
-                <div class="status"></div>
-            </div>
             <div class="title">
                 <p>fall in Love..</p>
             </div>
+            <div class="status-bar">
+                <div class="status"></div>
+            </div>
+          
             <div class="q box">
-                Q1. 당신은 플러팅을 즐기십니까?
             </div>
             <div class="answer">
             </div>
         </section>
-            <!--<div class="qna_img">
-                <span class="img01"><img src="../images/s_images/qna_rabbit02.png"></span>
-                <span class="img02"><img src="../images/s_images/qna_rabbit01.png"></span>
-                <span class="img03"> <img src="../images/s_images/qna_rabbit03.png"></span>
-            </div>-->
         <footer class="footer">
             <p class="my_info">
                 <span class="dev_name">dev : Me-Nyong</span>
